force-app/main/default/objects/Policy__c/fields/Account_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person__c</fullName>
    <formula>Account__r.Contact_Person__r.FirstName + &apos; &apos; + Account__r.Contact_Person__r.LastName</formula>
    <label>Account Contact Person</label>
    <type>Text</type>
</CustomField>