force-app/main/default/objects/Policy__c/fields/Account_Contact_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Email__c</fullName>
    <formula>Account__r.Account_Contact_Person_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person Email</label>
    <type>Text</type>
</CustomField>