force-app/main/default/objects/Policy__c/fields/Account_Contact_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Phone__c</fullName>
    <formula>Account__r.Account_Contact_Person_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person Phone</label>
    <type>Text</type>
</CustomField>