force-app/main/default/objects/Policy__c/fields/Account_Management_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Rep__c</fullName>
    <formula>Account__r.Account_Management_Rep__r.FirstName + &quot; &quot; + Account__r.Account_Management_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Management Rep</label>
    <type>Text</type>
</CustomField>