force-app/main/default/objects/Policy__c/fields/Accounting_Classification__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Classification__c</fullName>
    <formula>IF(
OR(
ISPICKVAL( Policy_Type_Status__c , &quot;New Business&quot;),
ISPICKVAL( Policy_Type_Status__c , &quot;New Business - BOR&quot;)
)
,&quot;NB&quot;,
IF(
OR( 
ISPICKVAL( Policy_Type_Status__c , &quot;Renewal&quot;),
ISPICKVAL( Policy_Type_Status__c , &quot;Remarketed at Renewal&quot;)
), 
&quot;RE&quot;,
&quot;CANCELLED&quot;))</formula>
    <label>Accounting Classification</label>
    <type>Text</type>
</CustomField>