force-app/main/default/objects/Policy__c/fields/Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accounting Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>