force-app/main/default/objects/Policy__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Mailing_Street__c + &apos;, &apos; + Mailing_City__c + &apos;, &apos; + TEXT(Account__r.BillingStateCode) + &apos; &apos; + Mailing_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>