force-app/main/default/objects/Policy__c/fields/Admitted_old__c.field-meta.xml
<CustomField>
    <fullName>Admitted_old__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if the policy is Admitted</inlineHelpText>
    <label>Admitted - checkbox don&apos;t use</label>
    <type>Checkbox</type>
</CustomField>