force-app/main/default/objects/Policy__c/fields/Affidavit_number__c.field-meta.xml
<CustomField>
    <fullName>Affidavit_number__c</fullName>
    <formula>IF(AND(ISPICKVAL(Admitted__c, &quot;NO&quot;),Account__r.ShippingState==&apos;New York&apos;), TEXT(YEAR(TODAY()))&amp;&quot;000&quot;&amp;TEXT( $Setup.affivadit_ff__c.Next_Number__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affidavit number</label>
    <type>Text</type>
</CustomField>