force-app/main/default/objects/Policy__c/fields/All_other_subjectivities_met__c.field-meta.xml
<CustomField>
    <fullName>All_other_subjectivities_met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All other subjectivities met</label>
    <type>Checkbox</type>
</CustomField>