force-app/main/default/objects/Policy__c/fields/AMR_Email__c.field-meta.xml
<CustomField>
    <fullName>AMR_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AMR Email</label>
    <type>Email</type>
</CustomField>