force-app/main/default/objects/Policy__c/fields/AMR_Email_HB__c.field-meta.xml
<CustomField>
    <fullName>AMR_Email_HB__c</fullName>
    <description>Used for H&amp;B AMR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>H&amp;B AMR Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>