force-app/main/default/objects/Policy__c/fields/AMR_Email_Policy__c.field-meta.xml
<CustomField>
    <fullName>AMR_Email_Policy__c</fullName>
    <formula>Account__r.AMR_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMR Email</label>
    <type>Text</type>
</CustomField>