force-app/main/default/objects/Policy__c/fields/AMR_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>AMR_Phone_Number__c</fullName>
    <formula>Account__r.Account_Management_Rep__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMR Phone Number</label>
    <type>Text</type>
</CustomField>