force-app/main/default/objects/Policy__c/fields/AMR_Title__c.field-meta.xml
<CustomField>
    <fullName>AMR_Title__c</fullName>
    <formula>Account__r.Account_Management_Rep__r.Title</formula>
    <label>AMR Title</label>
    <type>Text</type>
</CustomField>