force-app/main/default/objects/Policy__c/fields/App_Link__c.field-meta.xml
<CustomField>
    <fullName>App_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>App Link</label>
    <length>200</length>
    <type>Text</type>
</CustomField>