force-app/main/default/objects/Policy__c/fields/Approved_Proposal_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Approved_Proposal_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Proposal Uploaded</label>
    <type>Checkbox</type>
</CustomField>