force-app/main/default/objects/Policy__c/fields/AR_6_Month_Email__c.field-meta.xml
<CustomField>
    <fullName>AR_6_Month_Email__c</fullName>
    <description>Field checks to true when AR Policy is 183 days til Renewal. Used to Trigger Zap &quot;AR 6 Month Reachout&quot;</description>
    <formula>AND (
RecordType.Name = &quot;Alpharoot&quot;,
In_Force__c = true,
Days_Until_Renewal__c = 183)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR 6 Month Email</label>
    <type>Checkbox</type>
</CustomField>