force-app/main/default/objects/Policy__c/fields/AR_6_Month_Email_Manual__c.field-meta.xml
<CustomField>
    <fullName>AR_6_Month_Email_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to manually trigger AR 6 Month Email</description>
    <label>AR 6 Month Email_Manual</label>
    <type>Checkbox</type>
</CustomField>