force-app/main/default/objects/Policy__c/fields/Ascend_Billable_Id__c.field-meta.xml
<CustomField>
    <fullName>Ascend_Billable_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Ascend Billable Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>