force-app/main/default/objects/Policy__c/fields/Assets_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Assets_Under_Management__c</fullName>
    <formula>Opportunity__r.Assets_Under_Management_AUM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assets Under Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>