force-app/main/default/objects/Policy__c/fields/Auto_Renewal_Override__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renewal Override</label>
    <type>Checkbox</type>
</CustomField>