force-app/main/default/objects/Policy__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Premium Finance Agreement</fullName>
            </value>
            <value>
                <fullName>Ascend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>