force-app/main/default/objects/Policy__c/fields/Billing_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Billing_for_Templates__c</fullName>
    <description>SF-1290</description>
    <formula>CASE(Billing__c,
    &quot;Agency&quot;, &quot;Agency&quot;,
    &quot;Direct&quot;, &quot;Direct&quot;,
    &quot;Premium Finance Agreement&quot;, &quot;Premium Finance Agreement&quot;,
    &quot;Ascend&quot;, &quot;Agency&quot;,
    null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing for Templates</label>
    <type>Text</type>
</CustomField>