force-app/main/default/objects/Policy__c/fields/Bind_Order_Sent__c.field-meta.xml
<CustomField>
    <fullName>Bind_Order_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bind Order Sent</label>
    <type>Checkbox</type>
</CustomField>