force-app/main/default/objects/Policy__c/fields/Binder_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Binder_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Binder Uploaded</label>
    <type>Checkbox</type>
</CustomField>