force-app/main/default/objects/Policy__c/fields/Binding_State__c.field-meta.xml
<CustomField>
    <fullName>Binding_State__c</fullName>
    <description>Update this field with the Primary Location State (aka Shipping State) when a policy is created. Not editable for the team. Use this for endorsements if the Shipping State differs from the Binding State. Team will need to calculate endt  taxes manually.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Binding State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>