force-app/main/default/objects/Policy__c/fields/Blanket_AI__c.field-meta.xml
<CustomField>
    <fullName>Blanket_AI__c</fullName>
    <formula>IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;Designated person&quot;), &quot;Designated person; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;Designated person - Products/completed ops&quot;), &quot;Designated person Products/completed ops; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;Mortgagee, Assignee or Receiver&quot;), &quot;Mortgagee, Assignee or Receiver; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;Blanket where required by contract&quot;), &quot;Blanket where required by contract; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;Owner/lesser of premises&quot;), &quot;Owner/lesser of premises; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;Owner/lessor of premises - Products/completed ops&quot;), &quot;Owner/lessor of premises - Products/completed ops; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;State or Governmental agency&quot;), &quot;State or Governmental agency; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;Vendor&quot;), &quot;Vendor; &quot;, NULL) + 
IF(INCLUDES(Opportunity__r.Blanket_AI__c , &quot;None&quot;), &quot;None&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blanket AI</label>
    <type>Text</type>
</CustomField>