force-app/main/default/objects/Policy__c/fields/Blanket_AI_Status_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Blanket_AI_Status_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blanket AI Status Confirmed</label>
    <type>Checkbox</type>
</CustomField>