force-app/main/default/objects/Policy__c/fields/BOP_Liability_Package__c.field-meta.xml
<CustomField>
    <fullName>BOP_Liability_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOP/Liability Package</label>
    <type>Checkbox</type>
</CustomField>