force-app/main/default/objects/Policy__c/fields/Broker_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_License_Number__c</fullName>
    <description>Scale</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker License Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>