force-app/main/default/objects/Policy__c/fields/BRP_Commission__c.field-meta.xml
<CustomField>
    <fullName>BRP_Commission__c</fullName>
    <label>BRP Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>