force-app/main/default/objects/Policy__c/fields/BRP_Historical_Data__c.field-meta.xml
<CustomField>
    <fullName>BRP_Historical_Data__c</fullName>
    <formula>Opportunity__r.BRP_Historical_Data__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRP Historical Data</label>
    <type>Checkbox</type>
</CustomField>