force-app/main/default/objects/Policy__c/fields/BRP_Historical_Data_Notes__c.field-meta.xml
<CustomField>
    <fullName>BRP_Historical_Data_Notes__c</fullName>
    <description>BRP Historical Data that does not fit into our existing fields.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Historical Data Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>