force-app/main/default/objects/Policy__c/fields/Bypass_PFA_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_PFA_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass PFA</description>
    <label>Bypass PFA Rule</label>
    <type>Checkbox</type>
</CustomField>