force-app/main/default/objects/Policy__c/fields/Bypass_Tax_Doc_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Tax_Doc_Formula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To trigger tax docs when there&apos;s an issue with the formula.</description>
    <label>Bypass Tax Doc Formula</label>
    <type>Checkbox</type>
</CustomField>