force-app/main/default/objects/Policy__c/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>