force-app/main/default/objects/Policy__c/fields/Cancel_Rewrite_Warning__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Rewrite_Warning__c</fullName>
    <formula>AND(
OR
(RecordType.Name = &quot;BRP&quot;,
RecordType.Name = &quot;Founder Shield&quot;,
RecordType.Name = &quot;AlphaRoot&quot;),
ISPICKVAL(Policy_Type_Status__c, &quot;Cancel/Rewrite&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Rewrite Warning</label>
    <type>Checkbox</type>
</CustomField>