force-app/main/default/objects/Policy__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Used for Scale cancellation endts.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scale cancellation endts. Endt effective date maps to this field.</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>