force-app/main/default/objects/Policy__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>Hartford</fullName>
            </value>
            <value>
                <fullName>Lloyds of London</fullName>
            </value>
            <value>
                <fullName>Beazley</fullName>
            </value>
            <value>
                <fullName>Scottsdale Insurance Company</fullName>
            </value>
            <value>
                <fullName>Travelers</fullName>
            </value>
            <value>
                <fullName>USLI</fullName>
            </value>
            <value>
                <fullName>ISI</fullName>
            </value>
            <value>
                <fullName>CFC Underwriting</fullName>
            </value>
            <value>
                <fullName>Hudson Specialty Insurance Company</fullName>
            </value>
            <value>
                <fullName>James River</fullName>
            </value>
            <value>
                <fullName>Arch</fullName>
            </value>
            <value>
                <fullName>Hiscox</fullName>
            </value>
            <value>
                <fullName>Liberty American Insurance Company</fullName>
            </value>
            <value>
                <fullName>Zurich</fullName>
            </value>
            <value>
                <fullName>Torus</fullName>
            </value>
            <value>
                <fullName>Roundhill Insurance Company</fullName>
            </value>
            <value>
                <fullName>AXIS Insurance</fullName>
            </value>
            <value>
                <fullName>First Rehab</fullName>
            </value>
            <value>
                <fullName>Northfield</fullName>
            </value>
            <value>
                <fullName>Evanston Insurance Company</fullName>
            </value>
            <value>
                <fullName>Erisk</fullName>
            </value>
            <value>
                <fullName>National Casualty Company</fullName>
            </value>
            <value>
                <fullName>Markel</fullName>
            </value>
            <value>
                <fullName>Great American E&amp;S</fullName>
            </value>
            <value>
                <fullName>Landmark</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Standard Security</fullName>
            </value>
            <value>
                <fullName>Admiral</fullName>
            </value>
            <value>
                <fullName>SafeOnline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>