force-app/main/default/objects/Policy__c/fields/Carrier_Fee__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Fee__c</fullName>
    <formula>Policy_Fee__c + Wholesale_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>