force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Issuing Company</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria in the carrier issuing company field</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Issuing Company</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Scale Issuing Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Carrier Issuing Company)</relationshipLabel>
    <relationshipName>Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>