force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_Address__c</fullName>
    <description>For TX Complaint Notice</description>
    <formula>Carrier_Issuing_Company__r.BillingStreet + &quot;, &quot;+
Carrier_Issuing_Company__r.BillingCity + &quot;, &quot;+
Carrier_Issuing_Company__r.BillingState + &quot; &quot;+
Carrier_Issuing_Company__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Issuing Company Address</label>
    <type>Text</type>
</CustomField>