force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company_Dental__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_Dental__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>H&amp;B</description>
    <label>Carrier Issuing Company Dental</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Carrier Issuing Company Dental)</relationshipLabel>
    <relationshipName>Policies2</relationshipName>
    <type>Lookup</type>
</CustomField>