force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company_Medical__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_Medical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>H&amp;B</description>
    <label>Carrier Issuing Company Medical</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Carrier Issuing Company Medical)</relationshipLabel>
    <relationshipName>Policies3</relationshipName>
    <type>Lookup</type>
</CustomField>