force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_Name__c</fullName>
    <formula>Carrier_Issuing_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Issuing Company Name</label>
    <type>Text</type>
</CustomField>