force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company_PEO__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_PEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>H&amp;B</description>
    <label>Carrier Issuing Company PEO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Carrier Issuing Company PEO)</relationshipLabel>
    <relationshipName>Policies5</relationshipName>
    <type>Lookup</type>
</CustomField>