force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company_Vision__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_Vision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>H&amp;B</description>
    <label>Carrier Issuing Company Vision</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Carrier Issuing Company Vision)</relationshipLabel>
    <relationshipName>Policies4</relationshipName>
    <type>Lookup</type>
</CustomField>