force-app/main/default/objects/Policy__c/fields/Carrier_Issuing_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_Website__c</fullName>
    <description>For Texas Complaint Notice</description>
    <formula>Carrier_Issuing_Company__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Issuing Company Website</label>
    <type>Text</type>
</CustomField>