force-app/main/default/objects/Policy__c/fields/Carrier_NAIC__c.field-meta.xml
<CustomField>
    <fullName>Carrier_NAIC__c</fullName>
    <formula>Carrier_Issuing_Company__r.NAICS_Code_IssuingCompanies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier NAIC</label>
    <type>Text</type>
</CustomField>