force-app/main/default/objects/Policy__c/fields/Checkbox_Statement_2__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_Statement_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in SL1Form</description>
    <label>Checkbox Statement 2</label>
    <type>Checkbox</type>
</CustomField>