force-app/main/default/objects/Policy__c/fields/Claim_Coverages__c.field-meta.xml
<CustomField>
    <fullName>Claim_Coverages__c</fullName>
    <description>This is used for the Coverage(s) field on the Claim object. The trigger populates this field when a policy is created and then is used in a formula field on the Claim.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim_Coverages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>