force-app/main/default/objects/Policy__c/fields/Claims_Count__c.field-meta.xml
<CustomField>
    <fullName>Claims_Count__c</fullName>
    <label>Claims Count</label>
    <summaryForeignKey>Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>