force-app/main/default/objects/Policy__c/fields/Coalition_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Coalition_Endorsements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Marketer/UW Name = Coalition Portal then populate this field called with this contact. https://foundershield.lightning.force.com/lightning/r/Contact/0031G00001Rf4ByQAJ/view</description>
    <label>Coalition Endorsements</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies (Coalition Endorsements)</relationshipLabel>
    <relationshipName>Policies6</relationshipName>
    <type>Lookup</type>
</CustomField>