force-app/main/default/objects/Policy__c/fields/Commercial_Package__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Package</label>
    <type>Checkbox</type>
</CustomField>