force-app/main/default/objects/Policy__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission</label>
    <length>16</length>
    <type>Text</type>
</CustomField>