force-app/main/default/objects/Policy__c/fields/Commission_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Commission_Adjusted__c</fullName>
    <formula>Premium_Adjusted__c *  Commission_Rate__c</formula>
    <label>Agency Commission Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>